marked up with the todos we discussed in the last meeting

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -12,7 +12,8 @@
 \urlstyle{rm}
 
 % changes package, and a bit more room on the right
-\usepackage[commandnameprefix=ifneeded]{changes}
+\usepackage{todonotes}
+\usepackage[commandnameprefix=ifneeded, todonotes={textsize=tiny}]{changes}
 \definechangesauthor[name=Greg, color=red]{Greg}
 \setlength{\marginparwidth}{1in}
 \geometry{right=1.2in}
@@ -41,6 +42,7 @@ Higher inductive types can capture some concepts of differential geometry in two
 \end{quote}
 
 \listofchanges[title=Changelist]
+\listoftodos
 
 \begin{comment}
 \section*{Notes so far from Mathieu and Steve}
