--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_vector_fields.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_vector_fields.tex
@@ -25,7 +25,7 @@ On 1-paths \( p:x=_{\mm_1}y \) \( X \) assigns a choice of pathover \( \pi:\tr(p
 
 The goal now is to recompute the total curvature in the context of some vector field \( X \) and obtain three values:
 \begin{enumerate}
-\item The total curvature, e.g. in the case of \( \oo \) the value \( R^8 \).
+\item \todo{Define these systematically}The total curvature, e.g. in the case of \( \oo \) the value \( R^8 \).
 \item The total winding of \( X \), which will take the proof of pointedness around all faces in the domain of \( X \). Being a loop in a circle, this is an integer.
 \item A pointed version of curvature, which couples the winding of \( X \) to the transport, which is a total function, and which produces a contractible pointed map, i.e. 0.
 \end{enumerate}
