work in progress for this week

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -10,6 +10,8 @@
 \setsansfont{Quadrat-Serial}
 \setmonofont{Courier New}
 \urlstyle{rm}
+\usepackage[font=footnotesize,labelfont=bf]{caption}
+
 
 % changes package, and a bit more room on the right
 \usepackage{todonotes}
