--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_vector_fields.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_vector_fields.tex
@@ -55,7 +55,7 @@ The \defemph{total index} of \( X \) is \( \mathscr{I}_X(\ell_{L,1}\cdot\cdots\c
 Here we are inspired by the classical proof of Hopf\cite{hopf}, presented in detail in Needham\cite{needham}.
 
 \begin{mydef}
-\label{def:enumeration}
+\label{def:enumeration2}
 An \defemph{enumeration} of a principal bundle with connection and vector field on a higher combinatorial manifold consists of the following data:
 \begin{itemize}
 \item a family \( T:\mm\to\Kzt \) on some higher combinatorial manifold
